add: avenir font in story book header

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,23 @@
 <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700" rel="stylesheet" />
+<style>
+   @font-face {
+    font-family: 'Avenir Next';
+    font-style: normal;
+    font-weight: 300;
+    src: url(/fonts/avenir-next-thin.woff) format('woff');
+  }
+ 
+  @font-face {
+    font-family: 'Avenir Next';
+    font-style: normal;
+    font-weight: 400;
+    src: url(/fonts/avenir-next-regular.woff) format('woff');
+  }
+ 
+  @font-face {
+    font-family: 'Avenir Next';
+    font-style: normal;
+    font-weight: 700;
+    src: url(/fonts/avenir-next-bold.woff) format('woff');
+  }
+</style>
