--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Assistant:400,600,700,800" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 <style>
    @font-face {
     font-family: 'Avenir Next';
