styles: add more style

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -13,5 +13,6 @@
     color: rgb(46, 68, 78);
     box-sizing: border-box;
     -webkit-font-smoothing: subpixel-antialiased;
+    background: #eee;
   }
 </style>
